--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- Beginning-->
 
 	
-<img id="coverimage" src="media/cover.gif" alt="Plate" style="max-width: 100%">
+<img id="coverimage" src="cover.gif" alt="Plate" style="max-width: 100%">
 
   <!-- Lead -->
   
