--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <div class="intro"  data-aos="fade-up">
         <article>
           <p>Каждый час в мире умирает один человек от расстройства пищевого поведения. 
-РПП — проблема 21 века, эпохи Instagram, марафонов по похудению и моды на худобу. В то время как социальные сети пополняются фотографиями истощенных моделей, люди, страдающие от РПП, голодают, изнуряют себя тренировками и режут себе запястья в попытках затмить эмоциональную боль. И пока в нашей культуре существует установка «стройный равно красивый» ничего не изменится. 
+РПП — проблема 21 века, эпохи Instagram, марафонов по похудению и моды на худобу. В то время как социальные сети пополняются фотографиями истощенных моделей, люди, страдающие от РПП, голодают, изнуряют себя тренировками и режут себе запястья в попытках затмить эмоциональную боль. И пока в нашей культуре существует установка «стройный равно красивый» - ничего не изменится. 
 </p>
-			<p>В России тема РПП практически не изучена: специалистов — мало, заболевших — много. Но наиболее страшно и опасно то, что общество не относится к этому заболеванию серьезно. По этой причине многие становятся триггерами для уже страдающих от РПП людей. Проблема всегда одна — ненависть к собственному телу и желание довести форму до идеала, но чем отличаются виды пищевых расстройств? </p>
+			<p>В России тема РПП практически не изучена: специалистов — мало, заболевших — много. Но наиболее страшно и опасно то, что общество не относится к этому заболеванию серьезно. По этой причине многие становятся триггерами для уже страдающих от РПП людей. Проблема всегда одна — ненависть к собственному телу и желание довести форму до идеала, а видов пищевых расстройств - множество. </p>
         </article>
 </div>
 
@@ -163,7 +163,7 @@
        <div class="parallax-content"> 
 		   <h3 data-aos="fade">Мышечная дисморфия</h3>
 		  <p data-aos="fade">Расстройство, при котором человек убежден, что его тело недостаточно мускулистое</p>
-		    <p data-aos="fade">Восприятие образа тела у людей с мышечной дисморфией искажено также, как и у анорексиков. В то время, как одни видят себя невообразимо толстыми, постепенно умирая от истощения, другие считают себя щуплыми и слабыми, обладая при этом нормальным мышечным корсетом. Из-за этого у людей с таким расстройством возникает навязчивая идея увеличить объем мышечной массы, они злоупотребляют тренировками, а иногда даже прибегают к опасным препаратам и гормонам. В отличии от других пищевых расстройств, мышечной дисморфии больше подвержены мужчины, чем женщины. </p>
+		    <p data-aos="fade">Восприятие образа тела у заболевших искажено, как и у анорексиков. В то время как одни видят себя невообразимо толстыми, постепенно умирая от истощения, другие считают себя щуплыми и слабыми, обладая при этом нормальным мышечным корсетом. Из-за этого у людей с таким расстройством возникает навязчивая идея увеличить объем мышечной массы, они злоупотребляют тренировками, а иногда даже прибегают к опасным препаратам и гормонам. Мышечной дисморфии больше подвержены мужчины, чем женщины. </p>
 		  </div>
 		</div>
         </div>
