--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
        <div class="parallax-content"> 
 		   <h3 data-aos="fade">Мышечная дисморфия</h3>
 		  <p data-aos="fade">Расстройство, при котором человек убежден, что его тело недостаточно мускулистое</p>
-		    <p data-aos="fade">Восприятие образа тела у заболевших искажено, как и у анорексиков. В то время как одни видят себя невообразимо толстыми, постепенно умирая от истощения, другие считают себя щуплыми и слабыми, обладая при этом нормальным мышечным корсетом. Из-за этого у людей с таким расстройством возникает навязчивая идея увеличить объем мышечной массы, они злоупотребляют тренировками, а иногда даже прибегают к опасным препаратам и гормонам. Мышечной дисморфии больше подвержены мужчины, чем женщины. </p>
+		    <p data-aos="fade">Люди с таким расстройством считают себя ужасно щуплыми и слабыми, обладая при этом нормальным мышечным корсетом. При дисморфии возникает навязчивая идея увеличить объем мышечной массы. Заболевшие злоупотребляют тренировками, принимают опасные препараты и гормоны. Мышечной дисморфии больше подвержены мужчины, чем женщины. </p>
 		  </div>
 		</div>
         </div>
