--- a/interview_elena.html
+++ b/interview_elena.html
@@ -5,8 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"/>
 <meta keywords="рпп, расстройство пищевого поведения, проблемы с питанием, анорексия, булимия, компульсивное переедание, диета,питание, еда, спорт, похудение, болезнь, социальный проект">
 <title>Елена</title>
+<link rel="shortcut icon" href="favicon.png" type="image/png">
 <link rel="stylesheet" href="style.css" type="text/css">
-	
+	<link rel="stylesheet" href="https://use.typekit.net/bbz0ust.css">
+
 	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -24,42 +26,41 @@
 </head>
 
 <body>
-<main> 
+<main>
 	<div class="section">
 		<h1>Елена, 39</h1>
 			<h2>Дизайнер</h2>
 		<article>
-<p>Моей болезни очень много лет, около 13. Все началось с отказа от еды, анорексии, но при этом я никогда не страдала из-за недовольства своим телом. Проблема была в другом. Я перенесла очень сильный стресс. Мы с моим мужем долго встречались, он был мне очень близким и дорогим человеком. Но, когда мы поженились, он понял, что мы не созданы друг для друга и пока у нас нет ни детей, нам лучше расстаться. Человек просто закрылся от меня: «Я так решил и все». Безапелляционно. Причины мне были непонятны, а разбираться и проговаривать это я не стала. И тогда я стала думать, что со мной что-то не так, что я до него не дотягиваю, что мне надо быть лучше.</p>
+<p>Моей болезни очень много лет, около 13. Все началось с отказа от еды, анорексии, но при этом я никогда не страдала из-за недовольства своим телом. Проблема была в другом. Я перенесла очень сильный стресс. Мы с моим мужем долго встречались, он был мне близким и дорогим человеком. Но, когда мы поженились, он понял, что мы не созданы друг для друга и пока у нас нет детей, нам лучше расстаться. Человек просто закрылся от меня: «Я так решил и все». Безапелляционно. Причины мне были непонятны, а разбираться и проговаривать это я не стала. И тогда я стала думать, что со мной что-то не так, что я до него не дотягиваю, что мне надо быть лучше.</p>
 
-<p>Я приняла решение, что стану самой хорошей, самой лучшей во всех вопросах. Хотелось развиваться, идти, выглядеть лучше. Через какое-то время, муж решил, что он совершил ошибку и хотел попробовать еще раз. Но я опять не понимала, почему человек сначала от меня отказался, а потом опять решил сойтись.</p>
+<p>Я приняла решение, что стану самой хорошей, самой лучшей во всех вопросах. Хотелось развиваться, идти, выглядеть лучше. Через какое-то время, муж решил, что он совершил ошибку и хотел попробовать еще раз. Но я опять не понимала, почему человек сначала от меня отказался, а потом решил сойтись.</p>
 
 <p>Но в тот момент я поняла, что со мной что-то произошло. Я словно потеряла доверие к жизни, к миру, к людям. Когда он вернулся, и мы стали жить, я забеременела, но у меня произошел выкидыш. И тогда, в совокупности все это очень сильно на меня повлияло.</p>
 
 <p>Я не проплакивала, не проживала эти переживания, я просто заблокировала свои чувства, я поняла, что любить и доверять — это небезопасно, это очень больно. Еще мне было стыдно, что со мной все это случилось: муж отказался, с ребенком что-то не так.</p>
 
-<p>Когда я вышла из больницы после того, как у меня случился выкидыш, я стала что-то есть, и помню, как у меня застрял кусок в горле. Вот говорят: «Кусок в горло не лезет», у меня было тоже самое, от нервного переживания. В голове закрепилось ощущение, что еда приносит мне опять какое-то страдание, какую-то боль. Я постепенно перестала есть и стала терять вес, с 52 я похудела до 43-44.</p>
+<p>Когда я вышла из больницы после того, как у меня случился выкидыш, я стала что-то есть, и помню, как у меня застрял кусок в горле. Вот говорят: «Кусок в горло не лезет», у меня было тоже самое от нервного переживания. В голове закрепилось ощущение, что еда приносит мне опять какое-то страдание, какую-то боль. Я постепенно перестала есть и стала терять вес, с 52 я похудела до 43-44.</p>
 
-<p>С этого момента я начала отслеживать свой вес, мне было интересно, сколько еще я смогу сбросить. Мне словно хотелось достижений в этой сфере. Жизнь сложна, и я не могла изменить ситуацию с мужем и оборванной беременностью, но здесь я могла что-то контролировать. Примерно полгода это длилось, я порхала, летала, пока в один момент не поняла, что я жутко хочу есть.</p>
+<p>С этого момента я начала отслеживать свой вес, мне было интересно, сколько еще я смогу сбросить. Мне словно хотелось достижений в этой сфере. Жизнь сложна, и я не могла изменить ситуацию с мужем и прерванной беременностью, но здесь я могла что-то контролировать. Примерно полгода это длилось, я порхала, летала, пока в один момент не поняла, что я жутко хочу есть.</p>
 
 <p>И я резко стала есть. Мне опять стало плохо, и автоматически появилось желание очиститься. Зафиксировался новый механизм: «Если теперь я ем, после я буду очищаться».</p>
 
-<p>В 26 лет я забеременела, муж тогда не знал о моей болезни. И меня, конечно, беспокоило, как я буду вынашивать ребенка. Но все пошло нормально, я продолжала вести прежний образ жизни и думала, что смогу с этим справиться.</p>
+<p>В 26 лет я забеременела, муж тогда не знал о моей болезни. И меня, конечно, беспокоило, как я буду вынашивать ребенка с такой болезнью. Но все пошло нормально, я продолжала вести прежний образ жизни и думала, что смогу с этим справиться.</p>
 
 <p>Родился мой первый ребенок, и начались первые громадные сложности. Все смешалось в один ком: ребенок и эта болезнь. Надо было это как-то совмещать, я не могла с этим справиться. Становилось все сложнее и сложнее.</p>
 
-<p>Потом мы переехали в Канаду, и я подумала: «Теперь точно все изменится». Я ждала какого-то чуда и не могла взять ответственность за происходящее. Честно сказать, болезнь и правда отступила на время, но потом вернулась. В Канаде у меня родился второй сын,</p>
-
-<p>сложностей стало еще больше. Я стала уходить в себя, мне стало безразлично, что происходит с моей жизнью, исчез страх, что со мной что-то произойдет. Единственное, что меня держало — осознание, что у меня есть дети, что них надо заботиться.</p>
+<p>Потом мы переехали в Канаду, и я подумала: «Теперь точно все изменится». Я ждала какого-то чуда и не могла взять ответственность за происходящее. Честно сказать, болезнь и правда отступила на время, но потом вернулась. В Канаде у меня родился второй сын, сложностей стало еще больше. Я стала уходить в себя, мне стало безразлично, что происходит с моей жизнью, исчез страх, что со мной что-то произойдет. Единственное, что меня держало — осознание, что у меня есть дети, что о них надо заботиться.
+</p>
 
 <p>Мы вернулись в Россию, у нас родился третий сын. И с появлением третьего ребенка, я поняла, что мой резерв исчерпан. В конце концов, состояние «я не умираю, но не могу больше так жить» заставило меня пойти что-то сделать. Раньше привычка страдать была для меня ближе, чем привычка что-то решать. Была такая ширма — «Я болею».</p>
 
-<p>Я начала искала ответы, искала везде. Но, когда мне становилось сложно и больно, я уходила в себя. Мне опять хотелось этой волшебной таблетки, хотелось, чтобы я проснулось, а все по-другому. Но этого не происходило, я со временем я осознала, что, возможно, я буду так жить всегда. Болезнь — это не что-то, что сейчас есть, а дальше что-то изменится и жизнь станет другая. Болезнь — это так и есть твоя жизнь сейчас.</p>
+<p>Я начала искала ответы, искала везде. Но, когда мне становилось сложно и больно, я уходила в себя. Мне опять хотелось этой волшебной таблетки, хотелось, чтобы я проснулось, а все по-другому. Но этого не происходило, со временем я осознала, что, возможно, буду так жить всегда. Болезнь — это не что-то, что сейчас есть, а дальше что-то изменится и жизнь станет другая. Болезнь — это и есть твоя жизнь сейчас.</p>
 
-<p>Мне казалось, долгое время, что я вот вылечусь, и все станет по-другому. Но сейчас я понимаю, что все что сейчас есть, даже болезнь и страдания — это тоже я. Из позиции «Почему мне? За что?» я уже вышла, болезнь помогла мне очень многим сейчас. Без опыта я бы не пришла к пониманию себя.</p>
+<p>Мне казалось, долгое время, что я вылечусь, и все станет по-другому. Но я понимаю, что все что сейчас есть, даже болезнь и страдания — это тоже я. Из позиции «Почему мне? За что?» я уже вышла, болезнь помогла мне очень многим. Без опыта я бы не пришла к пониманию себя.</p>
 
 <p>Я начала работать с психологом. Когда я начинала, мне казалось, за полгода терапии все пройдет, я опять строила какие-то ожидания. Но шаг за шагом я стала понимать, что нет никакой гарантии, что я выздоровею и сказала себе: «Я не знаю, что будет. Мне сейчас важно другое. Важно быть счастливой даже с этой болезнью». Потому что, когда прошел год, два, три, я еще думала. Когда прошло пять — тоже, но когда прошло десять лет…</p>
 
-<p>Я стала разбираться, что стоит за этим расстройтсвом. Прорабатывала что-то одно, начиналось другое, третье, десятое — хлынуло все.</p>
+<p>Я стала разбираться, что стоит за этим расстройством. Прорабатывала что-то одно, начиналось другое, третье, десятое — хлынуло все.</p>
 
 <p>За время терапии я осознала, что не знаю, какая я есть на самом деле. Многое из того, что я делала раньше, было продиктовано социумом, продемонстрировано родителями, я действовала не относительно своих представлений о жизни, а относительно чьих-то ожиданий. А когда все это рухнуло, я поняла, что я вообще — никто.</p>
 
@@ -67,13 +68,11 @@
 
 <p>Я сконцентрировалась только на лечении и понимании себя самой, отгородила себя от всего. И когда это внутренняя работа пошла, мне понадобилось всего два месяца на то, чтобы разобраться в себе. Я очень многое проговорила с психологом, она мне помогла найти какие-то ответы, проработать боль. Мне нужен был как раз такой нейтральный человек. Близкие ведь не смогут тебя понять, но не потому, что они не хотят помочь, а потому что они по-другому мыслят, у них нет этого опыта. И твой опыт нужен для тебя и для таких же людей.</p>
 
-<p>В конце концов, я вернулась к истокам болезни, в тот момент, когда все началось, к той ситуации с мужем. Когда мне сделали больно, я закрылась, перестала доверять миру, людям. У меня появилась установка, что любить — больно. «Я не хочу любить, потому что любовь несет за собой страдания». Но я приняла тот факт, что люди могут делать друг другу больно, могут ошибаться,</p>
-
-<p>пришла к этому, я простила мужа за ту ситуацию. Более того, я поняла, что сама делала ему больно, была жестокой и злой. И за это я попросила у него прощения.</p>
+<p>В конце концов, я вернулась к истокам болезни, в тот момент, когда все началось, к той ситуации с мужем. Когда мне сделали больно, я закрылась, перестала доверять миру, людям. У меня появилась установка, что любить — больно. «Я не хочу любить, потому что любовь несет за собой страдания». Но я приняла тот факт, что люди могут делать друг другу больно, могут ошибаться. Когда я пришла к этому, я простила мужа за ту ситуацию. Более того, я поняла, что сама делала ему больно, была жестокой и злой. И за это я попросила у него прощения.</p>
 
 <p>На следующее утро я вдруг взяла и зажила, мне больше не хотелось переедать, приступы исчезли. Я не перестаю благодарить жизнь за все — за то, что я не умерла.</p>
 
-<p>Когда болезнь отступила, жизнь легче не стала, но она стала счастливее. Просто раньше я использовала болезнь, как прикрытие. Все то, что держалось за болезнью, вывались — переживания, страхи, проблемы, ответственность. Сейчас я учусь с этим справляться. Меня тема болезни уже перестал волновать, но я принимаю, что весь опыт, который я приняла – это и есть моя жизнь.</p>
+<p>Когда болезнь отступила, жизнь легче не стала, но она стала счастливее. Просто раньше я использовала болезнь, как прикрытие. Все то, что держалось за болезнью, вывались — переживания, страхи, проблемы, ответственность. Сейчас я учусь с этим справляться. Меня тема болезни уже перестала волновать, но я понимаю, что весь опыт, который я приняла – это и есть моя жизнь.</p>
 			</article>
 	</div>
 </main>
