--- a/interview_maria.html
+++ b/interview_maria.html
@@ -5,7 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"/>
 <meta keywords="рпп, расстройство пищевого поведения, проблемы с питанием, анорексия, булимия, компульсивное переедание, диета,питание, еда, спорт, похудение, болезнь, социальный проект">
 <title>Мария</title>
+<link rel="shortcut icon" href="favicon.png" type="image/png">
 <link rel="stylesheet" href="style.css" type="text/css">
+	<link rel="stylesheet" href="https://use.typekit.net/bbz0ust.css">
 	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -20,28 +22,28 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/67458286" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
-	
+
 </head>
 
 <body>
-<main> 
+<main>
 	<div class="section">
 		<article>
-			<h1>Мария, 20</h1>
+			<h1>Мария, 21</h1>
 			<h2>Студентка</h2>
 <p>Знаете, в будущем я хочу снимать кино, хочу стать режиссером. Сейчас я учусь на факультете медиа и увлекаюсь всем, что связано с видео и фото продакшном.</p>
 
-<p>Когда меня спрашивают про мой характер, я не знаю, что сказать, потому трудно оценивать себя. Недавно мы с подругой обсуждали психологически трудную тему, и я поняла, насколько я ранимый человек. Как только что-то затрагивает мое эмоциональное состояние, меня словно выворачивает наизнанку, порой мне очень сложно с этим справляться, и эти переживания в себе я подавляю, потому что не всегда рядом есть кто-то, с кем я могу ими поделиться. Можно на пальцах одной руки пересчитать тех — с кем я могу поговорить о вещах, которые меня действительно тревожат. Правда, мне очень повезло с братом: мне кажется, что бы я не сделала, он всегда бы меня поддержал. С мамой у меня тоже хорошие отношения, она всегда старается меня понять, но есть вещи, о которых я не могу с ней говорить. Мы можем говорить про секс, дружбу – про все, что угодно, кроме вещей, которые касаются моего психологического здоровья.</p>
+<p>Когда меня спрашивают про мой характер, я не знаю, что сказать, потому что трудно оценивать себя. Недавно мы с подругой обсуждали психологически трудную тему, и я поняла, насколько я ранимый человек. Как только что-то затрагивает мое эмоциональное состояние, меня словно выворачивает наизнанку, порой мне очень сложно с этим справляться, и эти переживания в себе я подавляю, потому что не всегда рядом есть кто-то, с кем я могу ими поделиться. Можно на пальцах одной руки пересчитать тех, с кем я могу поговорить о вещах, которые меня действительно тревожат. Правда, мне очень повезло с братом: мне кажется, что бы я не сделала, он всегда бы меня поддержал. С мамой у меня тоже хорошие отношения, она всегда старается меня понять, но есть вещи, о которых я не могу с ней говорить. Мы можем говорить про секс, дружбу – про все, что угодно, кроме вещей, которые касаются моего психологического здоровья.</p>
 
 <p>В нашей семье нет понятия «психологическое состояние», «ментальное состояние», мы вообще это не обсуждаем, как будто бы этого не существует. В основном это влияние моего отца, он говорит, что «это все фигня, это все не работает, это все выдумано»</p>
 
 <p>Для него существует только физическое здоровье, ну, руки-ноги целы, грубо говоря.</p>
 
-<p>Я никогда не обращалась ко врачу по поводу пищевого расстройства, но я много читала на эту тему. Мне не просто об этом говорить, но все началось с того, что папа постоянно указывал на мой невысокий рост, метр шестьдесят. Он говорил, что высокие девушки, мол, красивые, им легче всего добиться, а мне придется добиваться мужского внимания и всего остального своими мозгами. Он противопоставлял высоких девушек как красивых мне. Все время. Он даже предлагал вытянуть мне ноги на аппарате Елизарова, чтобы я была выше и в его глазах красивее. Он возил меня ко врачу, осталась ли у меня зона роста, вырасту ли я еще. Но, помимо этого, он следил за моим весом, даже ставил на весы, проверял мой вес, а потом говорил: «Вот, ты маленького роста, поэтому ты должна быть худой, подтянутой, с накаченной задницей, чтобы все мужики падали и оборачивались». И, когда я стояла при нем на весах, мне хотелось убежать и больше не жить дома. Я испытывала стыд за свое тело. Бывало еще, он мог меня ущипнуть меня за бок, показывая, что там есть какая-то складка жира, например. Я начала испытывать самое ужасное чувство — стыд за то, что ты вот какой-то такой.</p>
+<p>Я никогда не обращалась ко врачу по поводу пищевого расстройства, но я много читала на эту тему. Мне не просто об этом говорить, но все началось с того, что папа постоянно указывал на мой невысокий рост, метр шестьдесят. Он говорил, что высокие девушки, мол, красивые, им легче всего добиться, а мне придется добиваться мужского внимания и всего остального своими мозгами. Он противопоставлял высоких девушек как красивых мне. Все время. Он даже предлагал вытянуть мне ноги на аппарате Илизарова, чтобы я была выше и в его глазах красивее. Он возил меня ко врачу, чтобы выяснить, осталась ли у меня зона роста, вырасту ли я еще. Но, помимо этого, он следил за моим весом, даже ставил на весы, проверял мой вес, а потом говорил: «Вот, ты маленького роста, поэтому ты должна быть худой, подтянутой, с накаченной задницей, чтобы все мужики падали и оборачивались». И, когда я стояла при нем на весах, мне хотелось убежать и больше не жить дома. Я испытывала стыд за свое тело. Бывало еще, он мог меня ущипнуть меня за бок, показывая, что там есть какая-то складка жира, например. Я начала испытывать самое ужасное чувство — стыд за то, что ты вот какой-то такой.</p>
 
-<p>Когда мне было 14-15 лет, я не помню точно, я встретила мальчика, который мне понравился, и сразу у меня всплыли фразы моего папы касательно моего внешнего вида. Я вспомнила его слова и подумала, что чтобы понравиться этому парню, мне нужно быть худой, хотя не могу сказать, что у меня был лишний вес. И с этого момента началась вся эпопея.</p>
+<p>Когда мне было 14-15 лет, я встретила мальчика, который мне понравился, и сразу у меня в голове всплыли фразы папы касательно моего внешнего вида. Я вспомнила его слова и подумала, что чтобы понравиться этому парню, мне нужно быть худой, хотя не могу сказать, что у меня был лишний вес. И с этого момента началась вся эпопея.</p>
 
-<p>Я никогда не обращалась ко врачам, поэтому не могу четко ставить какой-то диагноз, но началось все, по-моему мнению, с нервной анорексии, а закончилось булимией, которая продолжается рецидивами до сих пор. Это как всепродолжающийся кошмар, который из года в год, из месяца в месяц может продолжаться, уходить на некоторое время, а потом возвращаться вновь.</p>
+<p>Я никогда не обращалась ко врачам, поэтому не могу четко ставить какой-то диагноз, но началось все, по-моему мнению, с нервной анорексии, а закончилось булимией, которая продолжается рецидивами до сих пор. Это как вечно продолжающийся кошмар, который из года в год, из месяца в месяц может продолжаться, уходить на некоторое время, а потом возвращаться вновь.</p>
 
 <p>В начале я просто сидела на диетах, а потом в какой-то момент мой мозг решил, что это очень классно — просто перестать есть. И я перестала, начала пить слабительные, взвешивалась три раза в день: перед школой, после школой и перед сном, все время измеряла параметры своего тела. И я действительно сильно похудела, но не могу сказать, что мне стало нравится отражение в зеркале, мне хотелось еще больших и больших результатов. Дошло до того, что я начала есть по одной дольке яблока в день. На этой почве у меня началось нервное кожное заболевание — начала слезать кожа с верхней части тела. Это было жутко.</p>
 
