--- a/interview_a.html
+++ b/interview_a.html
@@ -5,7 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"/>
 <meta keywords="рпп, расстройство пищевого поведения, проблемы с питанием, анорексия, булимия, компульсивное переедание, диета,питание, еда, спорт, похудение, болезнь, социальный проект">
 <title>Anonymous</title>
+<link rel="shortcut icon" href="favicon.png" type="image/png">
 <link rel="stylesheet" href="style.css" type="text/css">
+	<link rel="stylesheet" href="https://use.typekit.net/bbz0ust.css">
 
 	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
@@ -24,7 +26,7 @@
 	</head>
 
 <body>
-<main> 
+<main>
 	<div class="section">
 		<article>
 			<h1>Анонимное интервью</h1>
@@ -35,17 +37,15 @@
 
 <p>О своей семье много я рассказать не могу, мы достаточно далеки друг от друга. О моем расстройстве они, конечно, знают. Мама пытается понять меня, но я вижу, как у нее строка error 404 бежит. Она видит, что я страдаю, но не может понять, почему. Для нее это просто: «Ну не ешь, ну ешь. Ну в чем проблема? Я с ней стараюсь это не обсуждать, потому что становится хуже, ты как будто разочаровываешься в своем родителе: «Как же так? Мать моя родная меня не понимает!» Нужно понимать, что у всех разный бэкграунд. Ну, не понимает, психиатр дай бог поймет.</p>
 
-<p>Мне трудно говорить за свою болезнь, потому что изначально у меня была другая психическое расстройство, а проблема с питанием была просто побочкой. Но меня начали лечить от РПП, так я его и заработала.</p>
+<p>Мне трудно говорить за свою болезнь, потому что изначально у меня было другое психическое расстройство, а проблема с питанием была просто побочкой. Но меня начали лечить от РПП, так я его и заработала.</p>
 
 <p>Когда я заболела, мне было 14 лет. Вообще бич РПП – это то, что оно появляется в подростковом возрасте. Я знала девочку, которая заболела анорексией в 8 лет. Когда мы познакомились, ей было 12, и я на нее смотрела, а мне было страшно от того, что в ее голове только мысли о том, как похудеть, как обмануть родителей и не поесть. Я вспоминаю себя в 8 лет: думала об учебе или о том, как день рождения получше отпраздновать. Я не ставлю себя выше нее, наоборот, мне ее жалко.</p>
 
-<p>Говоря о том подростковом периоде, я вспоминаю, как однажды я заболела, и очень быстро набрала вес. Это было время, когда у меня еще не было РПП. И вот, я пришла в школу, а некоторые мои подружки перестали со мной общаться, просто перестали разговаривать, потому что я потолстела. Это был какой-то урок, я считаю. Наглядный пример, что такое вообще в жизни есть, что так бывает: люди оценивают других людей по внешности, хоть это и неправильно. Когда я знакомлюсь с людьми, мне неважно, как они выглядят, нужно всех принимать. Ты не знаешь, что случилось с человеком, и случится ли</p>
+<p>Говоря о том подростковом периоде, я вспоминаю, как однажды я заболела, и очень быстро набрала вес. Это было время, когда у меня еще не было РПП. И вот, я пришла в школу, а некоторые мои подружки перестали со мной общаться, просто перестали разговаривать, потому что я потолстела. Это был какой-то урок, я считаю. Наглядный пример, что такое вообще в жизни есть, что так бывает: люди оценивают других людей по внешности, хоть это и неправильно. Когда я знакомлюсь с людьми, мне неважно, как они выглядят, нужно всех принимать. Ты не знаешь, что случилось с человеком, и случится ли что-то подобное с тобой. Я не для красного словца это рассказываю, а потому что знаю, что в жизни возможно все.</p>
 
-<p>что-то подобное с тобой. Я не для красного словца это рассказываю, а потому что знаю, что в жизни возможно все.</p>
+<p>Мне было все равно, что меня в классе хейтят, что я какая-то не такая, полная или еще что-то, мне все равно на журналы и фотографии моделей. Моя история нетипичная, не из-за мальчика, не из-за родителей — просто врачебная ошибка.</p>
 
-<p>Мне было все равно, что меня в классе хейтят, что я какая-то не такая, полная или еще что-то, мне также все равно на журналы и фотографии моделей. Моя история нетипичная, не из-за мальчика, не из-за родителей — просто врачебная ошибка.</p>
-
-<p>Где-то год назад я выздоровела. Но за время короноврисуа из-за некоторых обстоятельств у меня началась сильная депрессия, а за ней — вновь компульсивное переедание. И сейчас, когда я начинаю прокручивать в голове моменты, которые меня ранят, моя единственная реакция — есть, как у алкоголика – напиваться, у наркомана – колоться.</p>
+<p>Где-то год назад я выздоровела. Но за время коронавируса из-за некоторых обстоятельств у меня началась сильная депрессия, а за ней — вновь компульсивное переедание. И сейчас, когда я начинаю прокручивать в голове моменты, которые меня ранят, моя единственная реакция — есть, как у алкоголика — напиваться, у наркомана — колоться.</p>
 
 <p>Компульсивное переедание — такая же зависимость. Это страшно, потому что, когда у тебя проблемы с едой – зависимость очень сложно вылечить. С наркотиками все понятно: это убивает точно всех. А с едой непонятно, потому что человеку нужно есть. И когда ты садишься за стол, начинается такая борьба: «Что сейчас будет? Переешь ты? Не переешь?» Какие-то неоднозначные отношения с едой, хотя они должны быть простыми. Это все равно что просыпаться утром и думать: «Почистить мне зубы или нет? Убьет меня щетка или нет?» Нормальный человек скажет: «Что за фигню ты несешь? Просто почисть зубы», а ты не сможешь.</p>
 
@@ -55,7 +55,7 @@
 
 <p>На первом курсе у меня была очень сильная депрессия, я много пропускала пары, просто не могла выйти из дома. И моей матери это было непонятно, но я просто физически не могла: мне было страшно людей видеть. И за то время, что она была на работе, я успевала от нее отвыкнуть, для меня было огромным стрессом, когда она возвращалась домой.</p>
 
-<p>Раньше я работала с психологом и во время пандемии, когда мне стало совсем хреново, с психотерапевтом. Сейчас я читаю много литературы, мне кажется, это очень важно. Как-то раз я забила на самообразование, и эффект от лечения был не такой.</p>
+<p>Раньше я работала с психологом и во время пандемии, когда мне стало совсем хреново, с психотерапевтом. Сейчас я много читаю на эту тему, мне кажется, это очень важно. Как-то раз я забила на самообразование, и эффект от лечения был не такой.</p>
 
 <p>Честно сказать, я слишком устала от этого всего, слишком много психиатрии в моей жизни.</p>
 
