--- a/index.html
+++ b/index.html
@@ -329,22 +329,22 @@
       <div class="interview-card" onClick="window.location.href='interview_maria.html'">
         <h3>Мария, 21</h3>
         <h4>Студентка</h4>
-        <p>Самое страшное, что в последнее время это стало рутиной, я уже не боюсь переесть, потому что знаю, что потом очищусь от этой еды. Я настолько привыкла за пять лет к этому состоянию, теперь это как ежедневный ритуал, как зубы почистить или в институт брови накрасить. </p>
+        <p>Самое страшное, что в последнее время это стало рутиной, я уже не боюсь переесть, потому что знаю, что потом очищусь от этой еды. Я настолько привыкла за пять лет к этому состоянию, теперь это как ежедневный ритуал, как зубы почистить или в институт брови накрасить... </p>
       </div>
       <div class="interview-card" onClick="window.location.href='interview_elena.html'">
         <h3>Елена, 39</h3>
         <h4>Дизайнер</h4>
-        <p>С этого момента я начала отслеживать свой вес, мне было интересно, сколько еще я смогу сбросить. Мне словно хотелось достижений в этой сфере. Жизнь сложна, и я не могла изменить ситуацию с мужем и оборванной беременностью, но здесь я могла что-то контролировать. Примерно полгода это длилось, я порхала, летала, пока в один момент не поняла, что я жутко хочу есть.</p>
+        <p>С этого момента я начала отслеживать свой вес, мне было интересно, сколько еще я смогу сбросить. Мне словно хотелось достижений в этой сфере. Жизнь сложна, и я не могла изменить ситуацию с мужем и оборванной беременностью, но здесь я могла что-то контролировать. Примерно полгода это длилось, я порхала, летала, пока в один момент не поняла, что я жутко хочу есть...</p>
       </div>
       <div class="interview-card" onClick="window.location.href='interview_angelina.html'">
         <h3>Ангелина, 20</h3>
         <h4>Студентка</h4>
-        <p>У меня начался бзик. Если я иду к подруге, а у нее нет весов, меня начинают беспокоить мысли: «Я должна прийти домой и срочно взвеситься.» И первым делом, когда я приду домой, я взвешусь и посмотрю, сколько я у нее наела. И первым делом, когда я приду домой, я взвешусь и посмотрю, сколько я у нее наела. </p>
+        <p>У меня начался бзик. Если я иду к подруге, а у нее нет весов, меня начинают беспокоить мысли: «Я должна прийти домой и срочно взвеситься.» И первым делом, когда я приду домой, я взвешусь и посмотрю, сколько я у нее наела. И первым делом, когда я приду домой, я взвешусь и посмотрю, сколько я у нее наела... </p>
       </div>
       <div class="interview-card" onClick="window.location.href='interview_a.html'">
         <h3>Аноним</h3>
         <h4>-</h4>
-        <p>Сейчас, когда я начинаю прокручивать в голове моменты, которые меня ранят, моя единственная реакция — есть, как у алкоголика — напиваться, у наркомана – колоться. Компульсивное переедание — такая же зависимость. Это страшно, потому что, когда у тебя проблемы с едой – зависимость очень сложно вылечить.</p>
+        <p>Сейчас, когда я начинаю прокручивать в голове моменты, которые меня ранят, моя единственная реакция — есть, как у алкоголика — напиваться, у наркомана – колоться. Компульсивное переедание — такая же зависимость. Это страшно, потому что, когда у тебя проблемы с едой – зависимость очень сложно вылечить...</p>
       </div>
     </div>
 
