--- a/interview_angelina.html
+++ b/interview_angelina.html
@@ -26,6 +26,11 @@
 
 <body>
 <main>
+
+	<div class="videowrapper">
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/6f6UhNbbBpU" modestbranding="1" showinfo="0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
+
 	<div class="section">
 		<article>
 			<h1>Ангелина, 20</h1>
