--- a/interview_elena.html
+++ b/interview_elena.html
@@ -27,6 +27,10 @@
 
 <body>
 <main>
+	<div class="videowrapper">
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/MCNUOQ8phpE" modestbranding="1" showinfo="0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
+
 	<div class="section">
 		<h1>Елена, 39</h1>
 			<h2>Дизайнер</h2>
