--- a/interview_a.html
+++ b/interview_a.html
@@ -27,6 +27,10 @@
 
 <body>
 <main>
+
+<div class="videowrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/m3K4qyIZ2xY" modestbranding="1" showinfo="0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 	<div class="section">
 		<article>
 			<h1>Анонимное интервью</h1>
