--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
       </article>
     </div>
 
+
+    <div class="videowrapper">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/b3cy7SjtWKY" modestbranding="1" showinfo="0" frameborder="0" rel="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+    </div>
+
+
     <a name="factors" class="navlink"></a>
     <!--Factors-->
     <div class="section">
